# garden_watering-MeshMaster_Server

./: .gitignore  CMakeLists.txt  Dockerfile.template  README.md  docker-compose.yml  func.cpp  main.cpp  master_rpi.cpp  microsvc_controller.hpp  push.sh
MeshController/: CMakeLists.txt  Dockerfile.template  build_depencies.sh
MeshController/source/: main.cpp
MeshController/source/includes/: exceptions.hpp  radio.hpp
MeshController/source/includes/foundation/include/: controller.hpp
controller/: Dockerfile.template
controller/gradle/wrapper/: gradle-wrapper.properties
controller/src/main/resources/: config.yml
controller/src/test/resources/: application-test.yml
includes/: func.hpp
mesh/controller/source/includes/: exceptions.hpp  microsvc_controller.hpp  payloads.cpp
mesh/controller/source/includes/foundation/include/: usr_interrupt_handler.hpp
meshcontroller/: README.md
meshcontroller/source/includes/: func.cpp  microsvc_controller.cpp  payloads.cpp  payloads.hpp  radio.cpp  radio.hpp
source/: func.cpp  main.cpp  microsvc_controller.cpp  microsvc_controller.hpp  payloads.cpp  radio.cpp
source/foundation/: basic_controller.cpp
source/foundation/include/: basic_controller.hpp
source/includes/: exceptions.hpp  func.hpp  microsvc_controller.cpp  microsvc_controller.hpp  names.hpp  payloads.cpp  payloads.hpp  radio.cpp  radio.hpp
source/includes/foundation/: basic_controller.cpp
source/includes/foundation/include/: basic_controller.hpp
system/controller/: .gitignore  Dockerfile.template  build.gradle
system/controller/src/main/resources/: application.yml.example  config.yml
systemcontroller/: Dockerfile.template  build.gradle
systemcontroller/gradle/wrapper/: gradle-wrapper.properties
systemcontroller/src/main/java/systemcontroller/config/: Config.java
systemcontroller/src/main/java/systemcontroller/meshcontroller/: CommandStatus.java  InvalidIndexException.java  InvalidNodeException.java  MeshController.java  MeshControllerApi.java  ValveState.java
systemcontroller/src/main/java/systemcontroller/start/: Main.java
systemcontroller/src/main/java/systemcontroller/update/: Update.java
systemcontroller/src/main/resources/: config.yaml
systemcontroller/src/test/resources/: test_config.yaml
(+75 files in other folders)
